# publication_env_blockchain_integrity

./: .gitignore  BLOCKCHAIN_PATENT.md  CODEX.md  DEVELOPMENT_PROGRESS.md  Makefile  README.md  changelog.md  main.tex  publication_rulez.md  pyproject.toml
experiments/: README.md
experiments/common/: __init__.py  hashing.py  manifest.py  paths.py  schema.py  storage.py
experiments/integrity/: __init__.py  cli.py  cost_analysis.py  evaluation.py  events.py  models.py  negative_cases.py  run_manifest.py  scenarios.py  tampering.py  threat_model.py  verification.py
experiments/openaq/: SNIPETS.md  cli.py  download.py  ingest.py  map.py
experiments/outputs/: demo_overview.md  full_matrix_summary_en.md  full_matrix_summary_pl.md
experiments/outputs/article_materials/: extended_methods_ready_notes.md  extended_results_ready_tables.md  methodology_decisions.md  methods_ready_notes.md  results_ready_tables.md  reviewer_limitations.md
notes/: accepted_comments.md  codex_tasks.md  decisions.md  experimental_plan.md  outline.md  paper_context.md  poc_architecture.md
refs/: references.bib
resources/: krzysztof_misztal_citations.bib
reviews/: review_index.json  reviewers.json
sections/: 01_introduction.tex  02_related_work.tex  03_methodology.tex  04_system_architecture.tex  05_discussion.tex  05_evaluation_results.tex  06_conclusions.tex
