[project]
name = "env-blockchain-integrity"
version = "0.1.0"
description = "Proof-of-concept experiments for environmental data integrity models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
compile = "python -m compileall experiments"
openaq-ingest = "python -m experiments.openaq.cli ingest"
openaq-download = "python -m experiments.openaq.cli download"
openaq-map = "python -m experiments.openaq.cli map"
integrity-init-db = "python -m experiments.integrity.cli init-db"
integrity-build-baseline = "python -m experiments.integrity.cli build-baseline"
integrity-build-hash-chain = "python -m experiments.integrity.cli build-hash-chain"
integrity-build-provenance-chain = "python -m experiments.integrity.cli build-provenance-chain"
integrity-verify = "python -m experiments.integrity.cli verify"
integrity-tamper = "python -m experiments.integrity.cli tamper"
